--- a/app/application.conf
+++ b/app/application.conf
@@ -1,2 +1,4 @@
 play.http.secret.key = "changeme"
 play.http.secret.key = ${?CRYPTO_SECRET}
+
+play.http.forwarded.trustedProxies = ["0.0.0.0/0", "::/0"]
