--- a/app/application.conf
+++ b/app/application.conf
@@ -2,3 +2,4 @@ play.http.secret.key = "changeme"
 play.http.secret.key = ${?CRYPTO_SECRET}
 
 play.http.forwarded.trustedProxies = ["0.0.0.0/0", "::/0"]
+play.http.forwarded.version = "rfc7239"
