--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,16 +1,16 @@
 steps:
 - name: 'gcr.io/cloudrun/pack'
-  args: ['build', '--builder=heroku/buildpacks:18', '--publish', 'gcr.io/$PROJECT_ID/log-all:$COMMIT_SHA']
+  args: ['build', '--builder=heroku/buildpacks:18', '--publish', 'gcr.io/$PROJECT_ID/pubsub-logger:$COMMIT_SHA']
 
-- name: 'gcr.io/cloud-builders/gcloud'
-  args:
-    - beta
-    - run
-    - deploy
-    - --image=gcr.io/$PROJECT_ID/$REPO_NAME:$COMMIT_SHA
-    - --platform=managed
-    - --project=$PROJECT_ID
-    - --region=us-central1
-    - --allow-unauthenticated
-    - --memory=256Mi
-    - $REPO_NAME
+steps:
+  - name: ghcr.io/jamesward/easycloudrun
+    entrypoint: pubsubhandler
+    env:
+      - 'PROJECT_ID=$PROJECT_ID'
+      - 'BUILD_ID=$BUILD_ID'
+      - 'COMMIT_SHA=$COMMIT_SHA'
+      - 'IMAGE_NAME=$REPO_NAME'
+      - 'IMAGE_VERSION=$COMMIT_SHA'
+      - 'REGION=us-central1'
+      - 'TOPIC=cloud-builds'
+
